# rust-service

./: Cargo.toml  README.md  TEST_RESULTS.md  best-practices.sh  config.toml  install.sh  run.sh  test.sh  test_config  test_validation.sh
.cargo/: config.toml
config/: lib.toml
scripts/: test.sh
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  monitoring.rs  test_config.rs
src/action/: config.rs  exec.rs  mod.rs
src/security/: limits.rs  mod.rs  uid.rs  validation.rs
src/service/: config.rs  config_error.rs  config_reader.rs  exec.rs  logging.rs  mod.rs  monitoring.rs  run.rs
src/service/config/: config_errors.rs  config_reader.rs  mod.rs  service_config.rs
src/service/errors/: mod.rs  service_errors.rs
src/service/logging/: file_logger.rs  mod.rs
src/service/monitoring/: mod.rs  resource_monitor.rs
src/service/security/: limits.rs  mod.rs  uid.rs  validation.rs
test_configs/: invalid_time.toml  malformed.toml  missing_field.toml
tests/: config_tests.rs  integration.rs  integration_rust_service.rs  monitoring_tests.rs  security_checks.rs  security_checks_rust_service.rs  test_common.rs  unit.rs  unit_test_rust_service.rs  unit_tests.rs  unit_tests_rust_service.rs
tests/integration/: common.rs  time_output_test.rs
tests/integration/app/: config_discovery_test.rs  logging_integration_test.rs  mod.rs  monitoring_integration_test.rs  security_workflow_test.rs  service_lifecycle_test.rs  shutdown_handling_test.rs  test_config_discovery.rs  test_graceful_shutdown_handling.rs  test_logging_integration.rs  test_monitoring_integration.rs  test_prerequisites.rs  test_prerequisites_check.rs  test_security_workflow.rs  test_security_workflow_integration.rs  test_service_lifecycle.rs  test_shutdown_handling.rs  test_system_resource_monitoring.rs
tests/integration/common/: test_prerequisites.rs
tests/integration_rust_service/common/: test_config_discovery.rs  test_graceful_shutdown_handling.rs  test_logging_integration.rs  test_monitoring_integration.rs  test_prerequisites.rs  test_prerequisites_check.rs  test_security_workflow.rs  test_security_workflow_integration.rs  test_service_lifecycle.rs  test_shutdown_handling.rs  test_system_resource_monitoring.rs
tests/security_checks/: test_directory_traversal.rs  test_file_descriptor_leak.rs  test_input_sanitization.rs  test_libc_error_handling.rs  test_service_user_validation.rs
tests/security_checks/app/: mod.rs  test_circular_dependency_prevention.rs  test_directory_traversal.rs  test_file_descriptor_leak.rs  (+11 more)
tests/unit_tests/: variable_naming_test.rs
(+27 files in other folders)
