[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-service"
path = "src/main.rs"

[lib]
name = "rust_service"
path = "src/lib.rs"

[lints.rust]
non_snake_case = "allow"

[dependencies]
log = { version = "0.4.28", features = ["std"] }
serde = { version = "1.0.226", features = ["derive"] }
toml = "0.9.7"
ctrlc = "3.5.0"
libc = "0.2.176"
thiserror = "2.0.16"
