[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[package.metadata]
install_dir = "#no installation directory required for libraries"

[features]
has_config_tests = []
has_monitoring_tests = []
has_monitoring_unit_tests = []

[lib]
name = "rust_service"
path = "src/lib.rs"

[lints.rust]
non_snake_case = "allow"

[dependencies]
log = { version = "0.4.28", features = ["std"] }
serde = { version = "1.0.226", features = ["derive"] }
toml = "0.9.7"
ctrlc = "3.5.0"
libc = "0.2.176"
thiserror = "2.0.16"
nix = { version = "0.30.1", features = ["fs"] }

[dev-dependencies]
regex = "1.0"
tempfile = "3.0"
walkdir = "2.0"
chrono = "0.4"
rust-common-tests = { path = "../rust-common-tests" }

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "integration_common"
path = "../rust-common-tests/tests/integration_common.rs"

[[test]]
name = "security_checks"
path = "tests/security_checks.rs"

[[test]]
name = "security_checks_common"
path = "../rust-common-tests/tests/security_checks_common.rs"

[[test]]
name = "unit"
path = "tests/unit.rs"

[[test]]
name = "unit_tests_common"
path = "../rust-common-tests/tests/unit_tests_common.rs"
